feat(source-bigquery-v2): Storage Read API option and sequential reads
Reads now default to one ordered, resumable query per stream
(application.yml mode: sequential). On BigQuery, splitting a table into
concurrent partitions needs a scan-free way to compute balanced
boundaries, and TABLESAMPLE SYSTEM (block sampling) cannot provide one:
its boundaries cluster in a single storage block, so one partition ends
up with almost the whole table and concurrency gives no speed-up while
each extra partition re-reads whole blocks and multiplies bytes billed.
Measured on a 5.2M-row / 1.3 GB table: concurrency 4 on the current
TABLESAMPLE split was no faster than concurrency 1.

Per-query throughput instead comes from the BigQuery Storage Read API,
exposed as a new optional spec property use_storage_read_api (default
off). When set, the configuration factory adds the driver property
EnableHighThroughputAPI=1 and the driver streams results as Apache Arrow
batches over gRPC instead of paging JSON through REST. On the same table
this took a sequential read from ~15 min to ~90 s, and record values are
byte-for-byte identical to the REST path across every type the connector
emits (verified: NUMERIC, BIGNUMERIC, FLOAT64, BYTES, TIMESTAMP,
GEOGRAPHY, INTERVAL, STRUCT, ARRAY, JSON, NULLs). A log line reports
whether the option is enabled.

JVM memory: Arrow uses off-heap direct memory, and it needs java.nio
opened on JDK 17+. The Bulk CDK default args pre-commit and cap the heap
at 75% of the container (Initial/MaxRAMPercentage=75), which, with Arrow
off-heap on top, inflates the pod footprint and on a single-node
deployment (abctl, one shared VM) starved co-located pods and got the
Airbyte server OOMKilled. The connector now caps the heap at 50% without
pre-committing it, keeps fail-fast on heap exhaustion, and adds
--add-opens=java.base/java.nio=ALL-UNNAMED (baked into the image start
script, honored at runtime; mirrors source-snowflake). The option is
wired only against the real ser